--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-app",
   "version": "0.0.1",
   "description": "React/Redux app",
-  "scripts" : {
+  "scripts": {
     "prestart": "babel-node tools/startMes.js",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
     "open:src": "babel-node tools/srcServer.js",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0",
@@ -41,7 +42,7 @@
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "enzyme": "2.2.0",
-    "eslint": "2.9.0",
+    "eslint": "^4.15.0",
     "eslint-plugin-import": "1.6.1",
     "eslint-plugin-react": "5.0.1",
     "eslint-watch": "2.1.11",
